# Rekindle

./: .actionlint.yaml  .dependency-cruiser.cjs  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .lefthook.yml  .markdownlint-cli2.yaml  .mcp.json  .mise.toml  .semgrep.yml  .sqlfluff  .stylelintrc.json  .zizmor.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  clippy.toml  compose.yml  deny.toml  flake.nix  index.html  knip.config.ts  lychee.toml  package.json  plan.md  playwright.config.ts  playwright.security.config.ts  pnpm-lock.yaml  rust-toolchain.toml  (+5 more)
crates/rekindle-aead/: Cargo.toml  build.rs
crates/rekindle-aead/benches/: aead_compare.rs
crates/rekindle-aead/src/: aegis128l.rs  aes_gcm.rs  lib.rs  traits.rs
crates/rekindle-analytics/: Cargo.toml
crates/rekindle-analytics/src/: buckets.rs  channel_metrics.rs  lib.rs  member_metrics.rs  storage.rs  tests.rs
crates/rekindle-audit/: Cargo.toml
crates/rekindle-audit/src/: chain.rs  lib.rs
crates/rekindle-calls/: Cargo.toml
crates/rekindle-calls/src/: error.rs  group.rs  group_state.rs  lib.rs  state.rs  state_machine.rs
crates/rekindle-channel/: Cargo.toml
crates/rekindle-channel/src/: automod.rs  deps.rs  error.rs  event.rs  expressions.rs  lib.rs  mentions.rs  notifications.rs  pipeline.rs  polls.rs  reactions.rs  receive.rs  send.rs  stage.rs  threads.rs
crates/rekindle-chat/: Cargo.toml
crates/rekindle-chat/src/: error.rs  lib.rs  time.rs
crates/rekindle-cli/: Cargo.toml
crates/rekindle-cli/keymap/: default.keymap.json
crates/rekindle-cli/src/: channel.rs  community.rs  dm.rs  error.rs  friends.rs  governance.rs  helpers.rs  identity.rs  keys.rs  main.rs  network.rs  node_daemon.rs  presence.rs  transport.rs  voice.rs
crates/rekindle-codec/: Cargo.toml
crates/rekindle-codec/src/: dedup.rs  envelope.rs  lib.rs
crates/rekindle-codec/tests/: smpl_write_marshalling_benchmark.rs
crates/rekindle-crypto/: Cargo.toml
crates/rekindle-crypto/src/: dht_crypto.rs  error.rs  identity.rs  keychain.rs  lib.rs
crates/rekindle-dm/: Cargo.toml
crates/rekindle-dm/src/: deps.rs  envelope.rs  error.rs  ingest.rs  invite.rs  lib.rs  mek.rs  receiver.rs  sender.rs  session.rs  video.rs
crates/rekindle-e2e-server/: Cargo.toml
crates/rekindle-events/: Cargo.toml
crates/rekindle-events/src/: dedup.rs  journal.rs  lib.rs  state.rs  state_effects.rs
crates/rekindle-files/: Cargo.toml
crates/rekindle-files/src/: cache.rs  chunker.rs  deps.rs  dht_scan.rs  download.rs  error.rs  expression_fetch.rs  expressions.rs  fek.rs  lib.rs  manifest.rs  pinned.rs  serve.rs  test_mock.rs  upload.rs  verify.rs
crates/rekindle-friendship/: Cargo.toml
crates/rekindle-friendship/src/: coordinator.rs  lib.rs  veilid_scanner.rs  watch_trigger.rs
crates/rekindle-game-detect/: Cargo.toml
crates/rekindle-game-detect/src/: database.rs  default_games.json  error.rs  launcher.rs  lib.rs  rich_presence.rs  runtime.rs  scanner.rs
crates/rekindle-gossip/: Cargo.toml
crates/rekindle-gossip/src/: broadcast.rs  dedup.rs  deps.rs  lamport.rs  lib.rs  mesh.rs  mesh_broadcast.rs  peer_select.rs  rate_limit.rs
crates/rekindle-gossip/tests/: throughput_benchmark.rs
crates/rekindle-governance/: Cargo.toml
crates/rekindle-governance-runtime/: Cargo.toml
crates/rekindle-governance-runtime/src/: apply.rs  bootstrap.rs  deps.rs  dht_hydration.rs  error.rs  event.rs  join.rs  join_stages.rs  lib.rs  origin.rs  roles.rs  segments.rs
crates/rekindle-governance/proptest-regressions/: merge.txt
crates/rekindle-governance/src/: invite_quota.rs  lib.rs  merge.rs  permissions.rs  raid_detection.rs  state.rs  validate.rs
crates/rekindle-governance/tests/: memory_footprint.rs  perf_targets.rs  plate_gate_e2e.rs  stress_255_member.rs
crates/rekindle-hash/: Cargo.toml  build.rs
crates/rekindle-hash/benches/: hash_compare.rs
crates/rekindle-hash/src/: lib.rs  multi_buffer.rs  single.rs
crates/rekindle-idempotency/: Cargo.toml
crates/rekindle-idempotency/src/: cache.rs  lib.rs
crates/rekindle-lifecycle/: Cargo.toml
crates/rekindle-lifecycle/src/: error.rs  guard.rs  lib.rs  state.rs
crates/rekindle-link-preview/: Cargo.toml
crates/rekindle-link-preview/src/: lib.rs
crates/rekindle-mek-rotation/: Cargo.toml
crates/rekindle-mek-rotation/src/: cache.rs  deps.rs  distribute.rs  election.rs  error.rs  event.rs  lib.rs  receive.rs  rotate.rs
crates/rekindle-node/: Cargo.toml
crates/rekindle-node/benches/: bulk_crypto.rs  bulk_e2e.rs  bulk_pipeline.rs  bulk_receive.rs  bulk_socket.rs  bulk_throughput.rs  event_fanout.rs  ipc_routing.rs  sha256_streaming.rs
crates/rekindle-node/src/: lib.rs  validation.rs
crates/rekindle-node/tests/: bulk_roundtrip.rs  bulk_socket.rs
crates/rekindle-presence/: Cargo.toml
crates/rekindle-presence/src/: friend.rs  friend_sync.rs  heartbeat.rs  idle.rs  lib.rs  poll_buckets.rs  status.rs
crates/rekindle-protocol/: Cargo.toml  build.rs
crates/rekindle-protocol/src/: capnp_codec.rs  error.rs  lib.rs  node.rs  peer.rs  routing.rs
crates/rekindle-ratchet/: Cargo.toml  build.rs
crates/rekindle-ratchet/proto/: rekindle.proto
crates/rekindle-ratchet/src/: error.rs  lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: audit_repo.rs  audit_view.rs  channel_materialize.rs  channel_repo.rs  db.rs  db_helpers.rs  deep_links.rs  envelope_store_sqlite.rs  event_dispatch.rs  friend_repo.rs  friend_store_sqlite.rs  invite_helpers.rs  ipc_client.rs  keystore.rs  lib.rs  main.rs  message_repo.rs  message_view.rs  serde_helpers.rs  signal_stores.rs  state.rs  state_helpers.rs  tray.rs  windows.rs
src-tauri/src/channels/: chat_channel.rs  community_channel.rs  mod.rs  notification_channel.rs  presence_channel.rs  voice_channel.rs
src-tauri/tests/: auth_flow.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+1706 files in other folders)
