[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/rekindle-protocol",
    "crates/rekindle-crypto",
    "crates/rekindle-game-detect",
    "crates/rekindle-voice",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
bytes = "1"
futures = "0.3"
parking_lot = "0.12"
capnp = "0.20"
capnpc = "0.20"
hex = "0.4"
rand = "0.8"

# Optimize crypto deps even in dev/test builds (debug-mode crypto is 100x slower).
# iota_stronghold internally uses rust-argon2 for snapshot KDF — the main bottleneck.
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.rust-argon2]
opt-level = 3
[profile.dev.package.iota_stronghold]
opt-level = 2
[profile.dev.package.iota-crypto]
opt-level = 3
[profile.dev.package.scrypt]
opt-level = 3

[workspace.lints.rust]
warnings = "deny"
unused-imports = "deny"
dead-code = "deny"
unused-variables = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
must-use-candidate = "allow"
return-self-not-must-use = "allow"
struct-excessive-bools = "allow"
