[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/rekindle-types",
    "crates/rekindle-secrets",
    "crates/rekindle-governance",
    "crates/rekindle-codec",
    "crates/rekindle-gossip",
    "crates/rekindle-route",
    "crates/rekindle-records",
    "crates/rekindle-files",
    "crates/rekindle-link-preview",
    "crates/rekindle-dm",
    "crates/rekindle-calls",
    "crates/rekindle-video",
    "crates/rekindle-sync",
    "crates/rekindle-protocol",
    "crates/rekindle-crypto",
    "crates/rekindle-game-detect",
    "crates/rekindle-voice",
    "crates/rekindle-e2e-server",
    "crates/rekindle-utils",
    "crates/rekindle-transport",
    "crates/rekindle-cli",
    "crates/rekindle-node",
    "crates/rekindle-storage",
    "crates/rekindle-ratchet",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
bytes = "1"
futures = "0.3"
parking_lot = "0.12"
capnp = "0.20"
capnpc = "0.20"
hex = "0.4"
rand = "0.8"

# Optimize crypto deps even in dev/test builds (debug-mode crypto is 100x slower).
# iota_stronghold internally uses rust-argon2 for snapshot KDF — the main bottleneck.
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.rust-argon2]
opt-level = 3
[profile.dev.package.iota_stronghold]
opt-level = 2
[profile.dev.package.iota-crypto]
opt-level = 3
[profile.dev.package.scrypt]
opt-level = 3

[workspace.lints.rust]
warnings = "deny"
unused-imports = "deny"
dead-code = "deny"
unused-variables = "deny"
unsafe-op-in-unsafe-fn = "warn"          # Rust 2024: explicit unsafe blocks in unsafe fns

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# --- Pedantic: allow legitimately noisy lints ---
module-name-repetitions = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
must-use-candidate = "allow"
return-self-not-must-use = "allow"
struct-excessive-bools = "allow"
items-after-statements = "allow"         # use statements in fn bodies (common in tests)
similar-names = "allow"                  # ct/pt, idx/id pairs — too many false positives
doc-markdown = "allow"                   # noisy for technical codebases
doc-lazy-continuation = "allow"          # multi-line doc comment formatting

# --- Security: cherry-picked restriction lints ---
dbg-macro = "deny"                       # no leftover dbg!() in production
todo = "deny"                            # no todo!() in shipped code
unimplemented = "deny"                   # no unimplemented!() in shipped code
undocumented-unsafe-blocks = "deny"      # every unsafe block needs // SAFETY: comment
print-stdout = "warn"                    # prefer tracing over println!
print-stderr = "warn"                    # prefer tracing over eprintln!
