[package]
name = "rekindle"
version = "0.0.1"
edition = "2021"
description = "Rekindle — Xfire rebuilt as a decentralized Tauri 2 app"

[lints]
workspace = true

[lib]
name = "rekindle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# v2.0 crates (flat governance)
rekindle-types = { path = "../crates/rekindle-types" }
rekindle-secrets = { path = "../crates/rekindle-secrets" }
rekindle-governance = { path = "../crates/rekindle-governance" }
rekindle-codec = { path = "../crates/rekindle-codec" }
rekindle-gossip = { path = "../crates/rekindle-gossip" }
rekindle-records = { path = "../crates/rekindle-records" }
rekindle-files = { path = "../crates/rekindle-files" }
rekindle-dm = { path = "../crates/rekindle-dm" }
rekindle-calls = { path = "../crates/rekindle-calls" }
rekindle-video = { path = "../crates/rekindle-video" }
rekindle-link-preview = { path = "../crates/rekindle-link-preview" }
rekindle-route = { path = "../crates/rekindle-route" }
rekindle-sync = { path = "../crates/rekindle-sync" }
# v1.0 crates (still used during migration)
rekindle-protocol = { path = "../crates/rekindle-protocol" }
rekindle-crypto = { path = "../crates/rekindle-crypto" }
rekindle-game-detect = { path = "../crates/rekindle-game-detect" }
rekindle-voice = { path = "../crates/rekindle-voice" }
rekindle-utils = { path = "../crates/rekindle-utils" }
# W16.9 — adoption of the unified transport boundary. Tauri shell
# becomes a thin frontend over rekindle-transport (parity with
# rekindle-cli and rekindle-node). Initially used for the W16
# reliability primitive (envelope_queue, SeqTracker) and call
# signaling (operations::calls); subsequent waves migrate more
# services through transport.
rekindle-transport = { path = "../crates/rekindle-transport" }
async-trait = "0.1"
ed25519-dalek = "2"
futures.workspace = true

tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
# tauri-plugin-window-state removed — causes infinite windowDidMove loop on macOS
# with prevent_exit(), see tauri#11489
tauri-plugin-store = "2"

# tauri-plugin-sql removed — using rusqlite directly for veilid-core compatibility
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
argon2 = "0.5"
iota_stronghold = "2.1"
zeroize = "1"
hex = "0.4"
blake3 = "1"
blake2 = "0.10"
indexmap = "2"
base64 = "0.22"
rand = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }
veilid-core = { version = "0.5.2", default-features = true }
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg", "gif"] }
# Architecture §28.4 device pairing — QR-code rendering for the
# pairing flow. SVG output keeps the frontend dep-free (it just
# `innerHTML`s the string into a <div>), per "all business logic in
# Rust" CLAUDE.md guidance.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Architecture §17.2 quiet hours — IANA timezone database for DST-aware
# local-time computation. The previous schema stored a static UTC
# offset which silently broke twice a year; chrono-tz resolves the
# correct offset for any (zone, instant) pair so the resolver in
# `is_quiet_hours_active` honors DST transitions automatically.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
