[package]
name = "rekindle-calls"
version = "0.1.0"
edition = "2021"
description = "Direct calls — X25519 ECDH call_key derivation, ring timer, missed-call state (architecture §10.10 Tier 7)"
license = "MIT"

[lints]
workspace = true

[dependencies]
rekindle-types = { path = "../rekindle-types" }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
rand = { workspace = true }
# Wave 12 W12.9 — group call key wrap. The initiator generates a
# random 32-byte call_key once, then per-recipient: derives a
# wrap_key via X25519 + HKDF, and seals call_key with AES-256-GCM.
aes-gcm = "0.10"
blake3 = "1"
