[package]
name = "rekindle-crypto"
version = "0.1.0"
edition = "2021"
description = "Ed25519 identity, Signal Protocol sessions, and group encryption for Rekindle"

[lints]
workspace = true

[dependencies]
rekindle-secrets = { path = "../rekindle-secrets" }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
postcard = { version = "1", features = ["use-std"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
parking_lot = "0.12"
# Phase 6 — SessionCache infrastructure
dashmap = "6"
lru = "0.12"
async-trait = "0.1"
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
