[package]
name = "rekindle-dm"
version = "0.1.0"
edition = "2021"
description = "Direct messages and group DMs — SMPL records with ECDH or wrapped MEK (architecture §27)"
license = "MIT"

[lints]
workspace = true

[dependencies]
rekindle-types = { path = "../rekindle-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
