[package]
name = "rekindle-files"
version = "0.1.0"
edition = "2021"
description = "Lost Cargo file sharing — chunking, Merkle, FEK, local cache for Rekindle v2.0"
license = "MIT"

[dependencies]
rekindle-types = { path = "../rekindle-types" }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lru = "0.12"
hex = { workspace = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
