[package]
name = "rekindle-gossip"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic gossip mesh primitives for Rekindle v2.0"

[lints]
workspace = true

[dependencies]
rekindle-types = { path = "../rekindle-types" }
rekindle-codec = { path = "../rekindle-codec" }
blake3 = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
rand = { workspace = true }
