[package]
name = "rekindle-governance-runtime"
version = "0.1.0"
edition = "2021"
description = "Phase 18 — community lifecycle orchestration (origin / bootstrap / join / segments / apply) layered on top of rekindle-governance's pure CRDT merge"
license = "MIT"

[lints]
workspace = true

[dependencies]
rekindle-types = { path = "../rekindle-types" }
rekindle-governance = { path = "../rekindle-governance" }
rekindle-crypto = { path = "../rekindle-crypto" }
rekindle-protocol = { path = "../rekindle-protocol" }
rekindle-secrets = { path = "../rekindle-secrets" }
rekindle-codec = { path = "../rekindle-codec" }
rekindle-utils = { path = "../rekindle-utils" }
async-trait = "0.1"
blake3 = "1"
hex = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
